src/main/java-gen/dev/monogon/cue/lang/parser/CueParser.java
// This is a generated file. Not intended for manual editing.
package dev.monogon.cue.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static dev.monogon.cue.lang.CueTypes.*;
import static dev.monogon.cue.lang.parser.CueParserUtil.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class CueParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return file(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(DECLARATION, EMBEDDING, FIELD),
    create_token_set_(ALIAS_EXPR, ARGUMENT, ARGUMENTS, BASIC_LIT,
      BINARY_EXPR, EXPRESSION, INDEX, LIST_LIT,
      LITERAL, MULTILINE_BYTES_LIT, MULTILINE_STRING_LIT, OPERAND,
      OPERAND_NAME, PRIMARY_EXPR, QUALIFIED_IDENT, SELECTOR,
      SIMPLE_BYTES_LIT, SIMPLE_STRING_LIT, STRUCT_LIT, UNARY_EXPR),
  };

  /* ********************************************************** */
  // Expression | IDENTIFIER "=" Expression
  public static boolean AliasExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AliasExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ALIAS_EXPR, "<alias expr>");
    r = Expression(b, l + 1, -1);
    if (!r) r = AliasExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // IDENTIFIER "=" Expression
  private static boolean AliasExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AliasExpr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, EQ);
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // Expression
  public static boolean Argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ARGUMENT, "<argument>");
    r = Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "(" [ ( Argument { "," Argument }* ) [ "," ] ] ")"
  public static boolean Arguments(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments")) return false;
    if (!nextTokenIsFast(b, LEFT_PAREN)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENTS, null);
    r = consumeTokenFast(b, LEFT_PAREN);
    p = r; // pin = 1
    r = r && report_error_(b, Arguments_1(b, l + 1));
    r = p && consumeToken(b, RIGHT_PAREN) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  // [ ( Argument { "," Argument }* ) [ "," ] ]
  private static boolean Arguments_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1")) return false;
    Arguments_1_0(b, l + 1);
    return true;
  }

  // ( Argument { "," Argument }* ) [ "," ]
  private static boolean Arguments_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Arguments_1_0_0(b, l + 1);
    r = r && Arguments_1_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // Argument { "," Argument }*
  private static boolean Arguments_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Argument(b, l + 1);
    r = r && Arguments_1_0_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // { "," Argument }*
  private static boolean Arguments_1_0_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Arguments_1_0_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Arguments_1_0_0_1", c)) break;
    }
    return true;
  }

  // "," Argument
  private static boolean Arguments_1_0_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, COMMA);
    r = r && Argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "," ]
  private static boolean Arguments_1_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Arguments_1_0_1")) return false;
    consumeTokenFast(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // INT_LIT | FLOAT_LIT | string_lit | NULL_LIT | BOOL_LIT | BOTTOM_LIT | TOP_LIT
  public static boolean BasicLit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "BasicLit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, BASIC_LIT, "<basic lit>");
    r = consumeTokenFast(b, INT_LIT);
    if (!r) r = consumeTokenFast(b, FLOAT_LIT);
    if (!r) r = string_lit(b, l + 1);
    if (!r) r = consumeTokenFast(b, NULL_LIT);
    if (!r) r = consumeTokenFast(b, BOOL_LIT);
    if (!r) r = consumeTokenFast(b, BOTTOM_LIT);
    if (!r) r = consumeTokenFast(b, TOP_LIT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // StartClause | LetClause
  public static boolean Clause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Clause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLAUSE, "<clause>");
    r = StartClause(b, l + 1);
    if (!r) r = LetClause(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // StartClause { [ "," ] Clause }*
  public static boolean Clauses(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Clauses")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, CLAUSES, "<clauses>");
    r = StartClause(b, l + 1);
    r = r && Clauses_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // { [ "," ] Clause }*
  private static boolean Clauses_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Clauses_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Clauses_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Clauses_1", c)) break;
    }
    return true;
  }

  // [ "," ] Clause
  private static boolean Clauses_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Clauses_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Clauses_1_0_0(b, l + 1);
    r = r && Clause(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [ "," ]
  private static boolean Clauses_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Clauses_1_0_0")) return false;
    consumeTokenFast(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // Clauses StructLit
  public static boolean Comprehension(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Comprehension")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, COMPREHENSION, "<comprehension>");
    r = Clauses(b, l + 1);
    r = r && StructLit(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Field | Ellipsis | Embedding | LetClause | attribute
  public static boolean Declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Declaration")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, DECLARATION, "<declaration>");
    r = Field(b, l + 1);
    if (!r) r = Ellipsis(b, l + 1);
    if (!r) r = Embedding(b, l + 1);
    if (!r) r = LetClause(b, l + 1);
    if (!r) r = attribute(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Embedding { "," Embedding }*
  public static boolean ElementList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElementList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ELEMENT_LIST, "<element list>");
    r = Embedding(b, l + 1);
    r = r && ElementList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // { "," Embedding }*
  private static boolean ElementList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElementList_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ElementList_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ElementList_1", c)) break;
    }
    return true;
  }

  // "," Embedding
  private static boolean ElementList_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ElementList_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, COMMA);
    r = r && Embedding(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "..." [ Expression ]
  public static boolean Ellipsis(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Ellipsis")) return false;
    if (!nextTokenIsFast(b, ELLIPSIS_TOKEN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, ELLIPSIS_TOKEN);
    r = r && Ellipsis_1(b, l + 1);
    exit_section_(b, m, ELLIPSIS, r);
    return r;
  }

  // [ Expression ]
  private static boolean Ellipsis_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Ellipsis_1")) return false;
    Expression(b, l + 1, -1);
    return true;
  }

  /* ********************************************************** */
  // Comprehension | AliasExpr
  public static boolean Embedding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Embedding")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EMBEDDING, "<embedding>");
    r = Comprehension(b, l + 1);
    if (!r) r = AliasExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // Label ":" { Label ":" }* Expression { attribute }*
  public static boolean Field(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FIELD, "<field>");
    r = Label(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && Field_2(b, l + 1);
    r = r && Expression(b, l + 1, -1);
    r = r && Field_4(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // { Label ":" }*
  private static boolean Field_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Field_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Field_2", c)) break;
    }
    return true;
  }

  // Label ":"
  private static boolean Field_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = Label(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, m, null, r);
    return r;
  }

  // { attribute }*
  private static boolean Field_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4")) return false;
    while (true) {
      int c = current_position_(b);
      if (!Field_4_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "Field_4", c)) break;
    }
    return true;
  }

  // { attribute }
  private static boolean Field_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Field_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "for" IDENTIFIER [ "," IDENTIFIER ] "in" Expression
  public static boolean ForClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForClause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, FOR_CLAUSE, "<for clause>");
    r = consumeTokenFast(b, "for");
    r = r && consumeToken(b, IDENTIFIER);
    r = r && ForClause_2(b, l + 1);
    r = r && consumeToken(b, "in");
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ "," IDENTIFIER ]
  private static boolean ForClause_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForClause_2")) return false;
    ForClause_2_0(b, l + 1);
    return true;
  }

  // "," IDENTIFIER
  private static boolean ForClause_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ForClause_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COMMA, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "if" Expression
  public static boolean GuardClause(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "GuardClause")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, GUARD_CLAUSE, "<guard clause>");
    r = consumeTokenFast(b, "if");
    r = r && Expression(b, l + 1, -1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // "import" ( ImportSpec | "(" { ImportSpec "," }* ")" )
  public static boolean ImportDecl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportDecl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_DECL, "<import decl>");
    r = consumeTokenFast(b, "import");
    r = r && ImportDecl_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ImportSpec | "(" { ImportSpec "," }* ")"
  private static boolean ImportDecl_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportDecl_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ImportSpec(b, l + 1);
    if (!r) r = ImportDecl_1_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // "(" { ImportSpec "," }* ")"
  private static boolean ImportDecl_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportDecl_1_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LEFT_PAREN);
    r = r && ImportDecl_1_1_1(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  // { ImportSpec "," }*
  private static boolean ImportDecl_1_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportDecl_1_1_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!ImportDecl_1_1_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ImportDecl_1_1_1", c)) break;
    }
    return true;
  }

  // ImportSpec ","
  private static boolean ImportDecl_1_1_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportDecl_1_1_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = ImportSpec(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // { UNICODE_VALUE }*
  public static boolean ImportLocation(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportLocation")) return false;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_LOCATION, "<import location>");
    while (true) {
      int c = current_position_(b);
      if (!ImportLocation_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "ImportLocation", c)) break;
    }
    exit_section_(b, l, m, true, false, null);
    return true;
  }

  // { UNICODE_VALUE }
  private static boolean ImportLocation_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportLocation_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, UNICODE_VALUE);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "\"" ImportLocation [ ":" IDENTIFIER ] "\""
  public static boolean ImportPath(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportPath")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_PATH, "<import path>");
    r = consumeTokenFast(b, "\"");
    r = r && ImportLocation(b, l + 1);
    r = r && ImportPath_2(b, l + 1);
    r = r && consumeToken(b, "\"");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ ":" IDENTIFIER ]
  private static boolean ImportPath_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportPath_2")) return false;
    ImportPath_2_0(b, l + 1);
    return true;
  }

  // ":" IDENTIFIER
  private static boolean ImportPath_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportPath_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, COLON, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // [ PackageName ] ImportPath
  public static boolean ImportSpec(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportSpec")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IMPORT_SPEC, "<import spec>");
    r = ImportSpec_0(b, l + 1);
    r = r && ImportPath(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ PackageName ]
  private static boolean ImportSpec_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ImportSpec_0")) return false;
    PackageName(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // "[" Expression "]"
  public static boolean Index(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Index")) return false;
    if (!nextTokenIsFast(b, LEFT_BRACKET)) return false;
    boolean r, p;
    Marker m = enter_section_(b, l, _NONE_, INDEX, null);
    r = consumeTokenFast(b, LEFT_BRACKET);
    p = r; // pin = 1
    r = r && report_error_(b, Expression(b, l + 1, -1));
    r = p && consumeToken(b, RIGHT_BRACKET) && r;
    exit_section_(b, l, m, r, p, null);
    return r || p;
  }

  /* ********************************************************** */
  // [ IDENTIFIER "=" ] LabelExpr
  public static boolean Label(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Label")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LABEL, "<label>");
    r = Label_0(b, l + 1);
    r = r && LabelExpr(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // [ IDENTIFIER "=" ]
  private static boolean Label_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Label_0")) return false;
    Label_0_0(b, l + 1);
    return true;
  }

  // IDENTIFIER "="
  private static boolean Label_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "Label_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, IDENTIFIER, EQ);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LabelName ["?"] | "[" AliasExpr "]"
  public static boolean LabelExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LabelExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LABEL_EXPR, "<label expr>");
    r = LabelExpr_0(b, l + 1);
    if (!r) r = LabelExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // LabelName ["?"]
  private static boolean LabelExpr_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LabelExpr_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = LabelName(b, l + 1);
    r = r && LabelExpr_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ["?"]
  private static boolean LabelExpr_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LabelExpr_0_1")) return false;
    consumeTokenFast(b, QMARK);
    return true;
  }

  // "[" AliasExpr "]"
  private static boolean LabelExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "LabelExpr_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokenFast(b, LEFT_BRACKET);
    r = r && AliasExpr(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, null, r);
    return r;
  }
